--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,4 +7,13 @@ body {
   }
   ::-webkit-scrollbar {
   display: none;
-  }
+}
+
+.text-overflow {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  word-break: break-word;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
